# seekerLogger

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in
include/: pch.h
include/seeker/: logger.h  loggerApi.h
src/: foo.cpp  main.cpp
